# chatty

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  character.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
src/: __init__.py  bot.py  character.py  discord_bot.py  llm.py  main.py  memory.py  scheduler.py
src/tools/: __init__.py  base.py  calendar.py  reminders.py
